<resources>
    <string name="terms1">By creating an account,you are agreeing to our terms and conditions</string>
    <string name="app_name">infoCancer</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="lostpassword">If you lost your password please contact <a href="mailto:support@cleverfinger.com.au?Subject=Lost%20Password" target="_top">support@cleverfinger.com.au</a></string>
    <string name="click"><a href="http://www.google.com">google</a></string>
    <string name="clicki"><a href="cancer.org">http://www.medicinenet.com/cancer/focus.htm</a></string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>
    <string name="smk_0">The twin on the right smoked for 14 years (a half-pack a day); her counterpart on the left is a nonsmoker. One of the characteristic signs is the looseness of the undereye skin, making her appear years older than her twin sister. This is one sign of skin damaged by smoking. The twin on the right further damaged her skin over time by repeated sun exposure.jgvbrfjdfvj
    afbdafhsduifjdiofj
    safhauifhujafhasfjiofjsiofjioj</string>
    <string-array name="stringcancer">
        <item>Cancer?</item>
        <item>Type of Cancer</item>
        <item>Symtoms and Signs</item>
        <item>Diagnosed</item>
        <item>Staging</item>
        <item>Prevension</item>
        <item>References</item>
    </string-array>
    <string name="abouts">
        infoCancer app is a helpful resource for patients.
        It provides information on type of cancers, provides
        a place to write questions, comments by doctors,
        list medications, record symptoms and more....

    </string>
    <string-array name="stringimage">
        <item>Main</item>
        <item>Breast Cancer</item>
        <item>Lung Cancer</item>
        <item>Skin Cancer</item>
        <item>Bladder Cancer</item>
        <item>Cervical Cancer</item>
        <item>Colorectal Cancer</item>
        <item>Ovarian Cancer</item>
        <item>Pancreatic Cancer</item>
        <item>Prostate Cancer</item>
        <item>Womens Cancer</item>
        <item>Mens Cancer</item>
        <item>Smoke Cancer</item>

    </string-array>
    <string-array name="stringquestion">
        <item>question1</item>
        <item>question2</item>
        <item>question3</item>
        <item>question4</item>
    </string-array>
            <string name="home_first">
                Cancers are a large family of diseases that
                involve abnormal cell growth with the potential
                 to invade or spread to other parts of the body.They
                 form a subset of neoplasms.
                  A neoplasm or tumor is a group of cells that have
                  undergone

            </string>
            <string name="f_1">* Cell growth and division without the proper signals to do so
                </string>
            <string name="f_2">* Continuous growth and division even when there are signals
                 telling them to stop</string>
    <string name="f_3">* Avoidance of programmed cell death</string>
            <string name="f_4">* Limitless number of cell divisions
            </string>
    <string name="f_5">* Promoting blood vessel construction</string>
    <string name="f_6">* Invasion of tissue and formation of metastases</string>
             <string name="backi">unregulated growth,
                  and will often form a mass or lump, but may be
                  distributed diffusely.These are characteristics that
                   the cancer cells need to produce a malignant tumor.</string>
             <string name="causes_1">Anything that may cause a
                    normal body cell to develop abnormally potentially
                    can cause cancer. Many things can cause cell abnormalities
                     and have been linked to cancer development. Some cancer causes
                     remain unknown while other cancers have environmental or lifestyle
                      triggers or may develop from more than one known cause.
                     Some may be developmentally influenced by a persons genetic makeup.
                     Many patients develop cancer due to a combination of these factors. Although it
                      is often difficult or impossible to determine the initiating event(s) that cause a
                     cancer to develop in a specific person, research has provided
                      clinicians with a number of likely causes that alone or in concert with other causes,
                       are the likely candidates for initiating cancer. The following is a listing of major
                       causes and is not all-inclusive as
                      specific causes are routinely added as research advances</string>
                <string name="causes_2">Benzene, asbestos, nickel, cadmium,
                    vinyl chloride, benzidine, N-nitrosamines, tobacco or
                    cigarette smoke (contains at least 66
                    known potential carcinogenic chemicals and toxins),
                    and aflatoxin</string>
                <string name="causes_3">Uranium, radon, ultraviolet rays from sunlight,
                    radiation from alpha, beta, gamma, and X-ray-emitting sources</string>
                <string name="causes_4"> Human papillomavirus (HPV),
                    EBV or Epstein-Barr virus, hepatitis viruses B and C, Kaposis sarcoma-associated herpes virus (KSHV), Merkel cell polyomavirus,
                     Schistosoma spp., and Helicobacter pylori
                     other bacteria are being researched as possible agents.</string>
                     <string name="causes_5"> A number of specific cancers have been
                         linked to human genes and are as follows: breast, ovarian,
                         colorectal, prostate, skin and melanoma; the specific genes and
                         other details are beyond the scope of this general article so the
                         reader is referred to the National Cancer
                         Institute for more details about genetics and cancer.</string>
                <string name="symtom">Symptoms and signs of cancer depend on
                         the type of cancer, where it is located, and/or where the
                          cancer cells have spread. For example, breast cancer may
                           present as a lump in the breast or as nipple discharge
                           while metastatic breast cancer may present with symptoms
                           of pain (if spread to bones), extreme fatigue (lungs), or seizures (brain).
                            A few patients show no
                         signs or symptoms until the cancer is far advanced</string>
                     <string name="symtom_1">
                         The American Cancer Society describes seven warning
                         signs that a cancer may be present, and which should prompt
                         a person to seek medical
                         attention. The word CAUTION can help you remember these.

                     </string>
    <string name="sym_1">* Change in bowel or bladder habits</string>
    <string name="sym_2">* A sore throat that does not heal</string>
                     <string name="sym_3">* Unusual bleeding or discharge (for example, nipple secretions or
                                             a "sore" that will not heal that oozes material)</string>
    <string name="sym_4">* Thickening or lump in the breast, testicles, or elsewhere</string>
                     <string name="sym_5">* Indigestion (usually chronic) or difficulty swallowing
                                                </string>
                     <string name="sym_6">* Obvious change in the size, color, shape,
                                                 or thickness of a wart or mole</string>
    <string name="sym_7">* Nagging cough or hoarseness</string>
                     <string name="symp_other">Other signs or symptoms may also alert you or your doctor to the
                             possibility of your having some form of cancer.
                             These include the following:</string>
    <string name="sym_o_1">* Unexplained loss of weight or loss of appetite</string>
                       <string name="sym_o_2">* A new type of pain in the bones or other parts of the body that may be steadily worsening,
                                             or come and go, but is unlike previous pains one has had before</string>
    <string name="sym_o_3">* Persistent fatigue, nausea, or vomiting</string>
    <string name="sym_o_4">* Unexplained low-grade fevers with may be either persistent or come and go</string>
                         <string name="symbacki_1">Many cancers will present with some of the above
                             general symptoms but often have one or more symptoms that are more specific
                              for the cancer type. For example, lung cancer may present with common symptoms
                              of pain, but usually the pain is located in the chest. The patient may have unusual
                               bleeding, but the bleeding usually occurs when the patient coughs.
                              Lung cancer patients often become short of breath and then become very fatigued.</string>
                         <string name="symbacki_2">Because there are so many cancer types (see next section)
                              with so many nonspecific and sometimes more specific symptoms, the best way to learn
                              about signs and symptoms of specific cancer types is to spend a few moments researching
                               symptoms of a specific body area in question. Conversely, a specific body area can be
                               searched to discover what signs and symptoms a person should look for in that area that
                               is suspected of having cancer.
                             The following examples are two ways to proceed to get information on symptoms:</string>
                             <string name="symbacki_o_1">* Use a search engine (Google, Bing) to find links to
                                 cancer by listing the symptom followed by the term "cancer" or if you know the
                                  type you want information about, (lung, brain, breast) use MedicineNet’s search
                                  option. For example, listing "blood in urine and cancer" will bring a person to web
                                   sites that list possible
                                 organs and body systems where cancer may produce the listed symptoms.</string>
                                 <string name="symbacki_o_2">* Use a search engine as above and list the suspected
                                      body area and cancer (for example, bladder and cancer), and the person will
                                       see sites that list the signs and symptoms of
                                     cancer in that area (blood in urine being one of several symptoms listed).</string>
                                     <string name="symbacki_o_3">* Be aware that many web sites are not necessarily reviewed by
                                         a health care professional and could contain information that is not accurate.
                                          Your health care professional is ultimately the best resource if you have concerns.</string>
</resources>