<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"

        >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:background="@drawable/buttonshape"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginRight="10dp"
            android:text="Cancer symptoms and signs?"
            />
        <TextView
            android:textSize="@dimen/textstandard"
            android:textColor="@color/balck"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/symtom"

            android:layout_marginTop="2dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/symtom_1"
            android:textSize="@dimen/textstandard"
            android:textColor="@color/balck"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="35dp"
            android:textSize="@dimen/textstandard"
            android:textColor="@color/balck"
            android:text="@string/sym_1"
            android:layout_marginRight="10dp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="35dp"
            android:textSize="@dimen/textstandard"
            android:textColor="@color/balck"
            android:layout_marginRight="10dp"
            android:text="@string/sym_2"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="35dp"
            android:textSize="@dimen/textstandard"
            android:textColor="@color/balck"
            android:text="@string/sym_3"
            android:layout_marginRight="10dp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="35dp"
            android:textSize="@dimen/textstandard"
            android:textColor="@color/balck"
            android:text="@string/sym_4"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/textstandard"
            android:textColor="@color/balck"
            android:text="@string/sym_5"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/textstandard"
            android:textColor="@color/balck"
            android:text="@string/sym_6"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/textstandard"
            android:textColor="@color/balck"
            android:text="@string/sym_7"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:textSize="@dimen/textstandard"
            android:textColor="@color/balck"
            android:text="@string/symp_other"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/textstandard"
            android:textColor="@color/balck"
            android:text="@string/sym_o_1"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/textstandard"
            android:textColor="@color/balck"
            android:text="@string/sym_o_2"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/textstandard"
            android:textColor="@color/balck"
            android:text="@string/sym_o_3"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="35dp"
            android:textSize="@dimen/textstandard"
            android:textColor="@color/balck"
            android:layout_marginRight="10dp"
            android:text="@string/sym_o_4"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/textstandard"
            android:textColor="@color/balck"
            android:text="@string/sym_o_3"

            />

        <TextView

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/textstandard"
            android:textColor="@color/balck"
            android:text="@string/symbacki_1"

            />
        <TextView

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/textstandard"
            android:textColor="@color/balck"
            android:text="@string/symbacki_2"

            />
        <TextView

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/textstandard"
            android:textColor="@color/balck"
            android:text="@string/symbacki_o_1"

            />
        <TextView

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/textstandard"
            android:textColor="@color/balck"
            android:text="@string/symbacki_o_2"

            />
        <TextView

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/textstandard"
            android:textColor="@color/balck"
            android:text="@string/symbacki_o_3"

            />

    </LinearLayout>



</ScrollView>
