<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:background="@color/white"
	>


	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"

		>

		<!-- first -->         <LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="165dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="20dp"
			android:orientation="horizontal"
			android:weightSum="2" >

			<TextView
				android:textSize="17dp"
				android:layout_weight="1"
				android:textColor="@color/balck"
				android:id="@+id/home_fb"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/home_first" />

			<ImageView
				android:layout_weight="1"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
                  android:id="@+id/info_front_image1"
				android:src="@drawable/babx" />

		</LinearLayout>


		<TextView
			android:textColor="@color/balck"
			android:textSize="17dp"
			android:layout_marginRight="10dp"
			android:layout_marginLeft="10dp"
			android:layout_weight="1"
			android:id="@+id/home_f"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/backi" />

	</LinearLayout>
		<!--<View
			android:layout_marginTop="4dp"
			android:layout_marginBottom="4dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_width="fill_parent"
			android:layout_height="1dp"
			android:background="@android:color/darker_gray"/>
-->


		<!-- second -->       <LinearLayout
		android:layout_marginRight="10dp"
		android:layout_marginLeft="10dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		>
		<LinearLayout

			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			>

			<LinearLayout
                android:orientation="vertical"
				android:id="@+id/second"
				android:layout_width="150dp"
				android:layout_height="350dp"
				android:src="@drawable/cccc"
                   >

				<ImageView
android:src="@drawable/demo_img1"
					android:layout_marginRight="3dp"
					android:id="@+id/info_front_image2"
					android:layout_width="150dp"
					android:layout_height="174dp" />

				<ImageView
					android:src="@drawable/demo_img2"
					android:id="@+id/info_front_image3"
					android:layout_marginTop="2dp"
					android:layout_width="150dp"
					android:layout_height="match_parent" />

			</LinearLayout>

			<LinearLayout
				android:layout_marginLeft="3dp"
				android:layout_marginTop="5dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"



				>

				<TextView
					android:textColor="@color/brn"
					android:layout_marginTop="2dp"
					android:text="@string/f_1"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textSize="@dimen/textsubHead"



					/>
				<TextView
					android:textColor="@color/brn"
					android:layout_marginTop="2dp"
					android:text="@string/f_2"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textSize="@dimen/textsubHead"
					/>

				<TextView
					android:textColor="@color/brn"
					android:layout_marginTop="2dp"
					android:text="@string/f_3"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textSize="@dimen/textsubHead"
					/>
				<TextView
					android:textColor="@color/brn"
					android:layout_marginTop="2dp"
					android:text="@string/f_4"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textSize="@dimen/textsubHead"


					/>
				<TextView
					android:textColor="@color/brn"
					android:layout_marginTop="2dp"
					android:text="@string/f_5"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textSize="@dimen/textsubHead"
					/>
				<TextView
					android:textSize="@dimen/textsubHead"
					android:textColor="@color/brn"
					android:layout_marginTop="2dp"
					android:text="@string/f_6"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"

					/>


			</LinearLayout>




		</LinearLayout>

		<View
			android:layout_marginTop="4dp"
			android:layout_marginBottom="5dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_width="fill_parent"
			android:layout_height="1px"
			android:background="@android:color/darker_gray"/>

		<!-- second closing -->	    </LinearLayout>


		<!-- third open -->    <LinearLayout
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"

		>
		<TextView
			android:background="@drawable/buttonshape"

			android:layout_marginLeft="12dp"
			android:layout_height="29dp"
			android:layout_width="fill_parent"
			android:textSize="22dp"
          android:textStyle="bold"
			android:textColor="@color/white"
			android:text="What causes cancer ?"
			android:gravity="center"
			/>
		<TextView
			android:textColor="@color/balck"
			android:layout_marginTop="1dp"
			android:layout_marginLeft="15dp"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:textSize="@dimen/textstandard"
			android:text="@string/causes_1"

			/>
		<TextView
			android:background="@drawable/info_frontpage_subline"
			android:textColor="@color/balck"
			android:layout_marginTop="2dp"
			android:layout_marginLeft="29dp"
			android:layout_height="26dp"
			android:layout_width="fill_parent"
			android:textSize="@dimen/textsubHead"
            android:textStyle="italic"

			android:text="* Chemical or toxic compound exposures"
			/>
		<TextView
			android:textColor="@color/balck"
			android:layout_marginRight="2dp"
			android:layout_marginTop="1dp"
			android:layout_marginLeft="45dp"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:textSize="@dimen/textstandard"
			android:text="@string/causes_2"
			/>

		<TextView
			android:background="@drawable/info_frontpage_subline"
			android:textColor="@color/balck"
			android:textStyle="italic"
			android:layout_marginTop="1dp"
			android:layout_marginLeft="29dp"
			android:layout_height="24dp"
			android:layout_width="fill_parent"
			android:textSize="@dimen/textsubHead"

			android:text="* Ionizing radiation"
			/>
		<TextView
			android:textColor="@color/balck"
			android:layout_marginRight="2dp"
			android:layout_marginTop="1dp"
			android:layout_marginLeft="45dp"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:textSize="@dimen/textstandard"
			android:text="@string/causes_3"
			/>
		<TextView
			android:background="@drawable/info_frontpage_subline"
			android:textColor="@color/balck"
			android:layout_marginTop="1dp"
			android:layout_marginLeft="29dp"
			android:layout_height="24dp"
			android:layout_width="fill_parent"
			android:textSize="@dimen/textsubHead"
			android:textStyle="italic"
			android:text="* Pathogens"
			/>
		<TextView

			android:textColor="@color/balck"
			android:layout_marginRight="2dp"
			android:layout_marginTop="1dp"
			android:layout_marginLeft="45dp"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:textSize="@dimen/textstandard"
			android:text="@string/causes_4"
			/>
		<TextView
			android:background="@drawable/info_frontpage_subline"
			android:textColor="@color/balck"
			android:layout_marginTop="2dp"
			android:layout_marginLeft="29dp"
			android:layout_height="24dp"
			android:textStyle="italic"
			android:layout_width="fill_parent"
			android:textSize="@dimen/textsubHead"
			android:text="* Genetics"
			/>
		<TextView
			android:textColor="@color/balck"
			android:layout_marginRight="2dp"
			android:layout_marginTop="1dp"
			android:layout_marginLeft="45dp"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:textSize="@dimen/textstandard"
			android:text="@string/causes_5"
			/>

		<!-- third close  --></LinearLayout>




		<!-- main close --></LinearLayout>





</ScrollView>
